# bevy_sly_blender

./: pyproject.toml  readme.md
docs/: python-setup.md
